# create_venv

./: .gitignore  1.ipynb  1.py  README.md  __main__.py  create_venv.py  pyproject.toml  setup.py
create_venv/: create_venv.py  test_create_venv.py
create_venv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test.py
